--- a/404.html
+++ b/404.html
@@ -32,9 +32,11 @@
         </div>
     </div>
     <div class="container">
-        <h1>404 Error<small>"I've got a bad feeling about this..."</small></h1>
+        <div class="page-header">
+            <h1>404 Error <small>"I've got a bad feeling about this..."</small></h1>
+        </div>
         <p>
-            Uh oh, looks like something went wrong! Head back to the home page before it gets any worse!
+            Uh oh, looks like something went wrong! Head back to the <a type="button" class="btn btn-primary" href="./main.html">Home</a> page before it gets any worse!
         </p>
     </div>
 </body>
