--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p>For Your Health</p>
         </div>
         <div class="btn-group-justified">
-            <a class="btn btn-primary btn-block" href="./main.html" role="button">Home</a>
+            <a class="btn btn-primary btn-block" href="./index.html" role="button">Home</a>
             <a class="btn btn-primary btn-block" href="./resume.html" role="button">Resume</a>
             <a class="btn btn-primary btn-block" href="./contact.html" role="button">Contact</a>
         </div>
