--- a/404.html
+++ b/404.html
@@ -18,25 +18,27 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
 
 </head>
+<header>
+        <!-- Page Header -->
+        <div class="container">
+                <div class="jumbotron text-center"> 
+                    <h1><b>KamVox</b></h1>
+                    <p>For Your Health</p>
+                </div>
+                <div class="btn-group-justified">
+                    <a class="btn btn-primary btn-block" href="./index.html" role="button">Home</a>
+                    <a class="btn btn-primary btn-block" href="./resume.html" role="button">Resume</a>
+                    <a class="btn btn-primary btn-block" href="./contact.html" role="button">Contact</a>
+                </div>
+            </div>
+</header>
 <body>
-    <!-- Page Header -->
-    <div class="container">
-        <div class="jumbotron"> 
-            <h1><b>KamVox</b></h1>
-            <p>For Your Health</p>
-        </div>
-        <div class="btn-group-justified">
-            <a class="btn btn-primary btn-block" href="./main.html" role="button">Home</a>
-            <a class="btn btn-primary btn-block" href="./resume.html" role="button">Resume</a>
-            <a class="btn btn-primary btn-block" href="./contact.html" role="button">Contact</a>
-        </div>
-    </div>
     <div class="container">
         <div class="page-header">
             <h1>404 Error <small>"I've got a bad feeling about this..."</small></h1>
         </div>
         <p>
-            Uh oh, looks like something went wrong! Head back to the <a type="button" class="btn btn-primary" href="./main.html">Home</a> page before it gets any worse!
+            Uh oh, looks like something went wrong! Head back to the <a type="button" class="btn btn-primary" href="./index.html">Home</a> page before it gets any worse!
         </p>
     </div>
 </body>
