--- a/index.html
+++ b/index.html
@@ -16,20 +16,21 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
 </head>
-<body>
+<header>
     <!-- Page Header -->
     <div class="container">
-        <div class="jumbotron text-center"> 
-            <h1><b>KamVox</b></h1>
-            <p>For Your Health</p>
+            <div class="jumbotron text-center"> 
+                <h1><b>KamVox</b></h1>
+                <p>For Your Health</p>
+            </div>
+            <div class="btn-group-justified">
+                <a class="btn btn-primary btn-block" href="./index.html" role="button">Home</a>
+                <a class="btn btn-primary btn-block" href="./resume.html" role="button">Resume</a>
+                <a class="btn btn-primary btn-block" href="./contact.html" role="button">Contact</a>
+            </div>
         </div>
-        <div class="btn-group-justified">
-            <a class="btn btn-primary btn-block" href="./index.html" role="button">Home</a>
-            <a class="btn btn-primary btn-block" href="./resume.html" role="button">Resume</a>
-            <a class="btn btn-primary btn-block" href="./contact.html" role="button">Contact</a>
-        </div>
-    </div>
-
+</header>
+<body>
     <!-- Page Body -->
     <div class="container">
 
