--- a/404.html
+++ b/404.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Kam's Humble 404 Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="index.css">
     
     
     <!-- BOOTSTRAP JUNK -->
@@ -32,6 +32,7 @@
                 </div>
             </div>
 </header>
+
 <body>
     <div class="container">
         <div class="page-header">
@@ -42,3 +43,9 @@
         </p>
     </div>
 </body>
+
+<footer class="container text-center">
+    <p>Site made by Kameron</p>
+    <p>Kamvox is the hub for Kameron's voice acting endeavours</p>
+    <p>Follow Kameron at his twitter <a href="https://twitter.com/CasualKameron">@CasualKameron</a></p>
+</footer>
