--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
 </head>
 <header>
-    <!-- Page Header -->
     <div class="container">
             <div class="jumbotron text-center"> 
                 <h1><b>KamVox</b></h1>
@@ -93,10 +92,12 @@
         </a>
         </div>
     </div>
-
-    <!-- Footer -->
-    <footer class="container-fluid bg-4 text-center">
-        <p>Site made by Kameron</p>
-    </footer>
 </body>
+
+<footer class="container text-center">
+        <p>Site made by Kameron</p>
+        <p>Kamvox is the hub for Kameron's voice acting endeavours</p>
+        <p>Follow Kameron at his twitter <a href="https://twitter.com/CasualKameron">@CasualKameron</a></p>
+</footer>
+
 </html>
