--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 <a href="./contact.html">Contact</a>
                             </li>
                             <li>
-                                <a href="https://twitter.com/CasualKameron" class="twitter-follow-button" data-size="large" data-lang="en" data-show-count="false">Follow @TwitterDev</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                                    <a href="https://twitter.com/CasualKameron?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @CasualKameron</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                             </li>
                         </ol>
                     </div>
