Fixed some things

--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
 </head>
 
-
-<body style="background-color:#7195b8;box-shadow:0px 0px 20px inset">
+<body style="background-color:#8b9aa8;">
 
     <!-- Menu -->
     <div class="menu">
         <div class="container-fluid">
             <center>
                     <div class="logo">
-                        <a href="www.kamvox.com">                                <!-- Put <img> here when logo done -->
+                        <a href="./index.html">                                <!-- Put <img> here when logo done -->
                             <h1>KamVox</h1>
                         </a>
                     </div>
@@ -37,35 +36,35 @@
             
                     <div class="menuitem">
                         <i>Voice Work</i>
-                        <ol>
+                        <ul>
                             <li>
                                 <a href="./demo.html">Voice Demos</a>
                             </li>
                             <li>
                                 <a href="./resume.html">Resume</a>
                             </li>
-                        </ol>
+                        </ul>
                     </div>
                     <hr>
                     <div class="menuitem">
                         <i>Poster Work</i>
-                        <ol>
+                        <ul>
                             <li>
                                 <a href="./portfolio.html">Portfolio</a>
                             </li>
-                        </ol>
+                        </ul>
                     </div>
                     <hr>
                     <div class="menuitem">
                         <i>Business Inquiries</i>
-                        <ol>
+                        <ul>
                             <li>
-                                <a href="./contact.html">Contact</a>
+                                kam@kamvox.com
                             </li>
                             <li>
-                                    <a href="https://twitter.com/CasualKameron?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @CasualKameron</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                                <a href="https://twitter.com/CasualKameron?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @CasualKameron</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                             </li>
-                        </ol>
+                        </ul>
                     </div>
                     </center>
         </div>
