--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>KamVox: Voice Acting</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Poor+Story" rel="stylesheet">
@@ -17,9 +18,9 @@
             </div>
             <hr>
         </div>
-        <li><a class="active" href="#home">Voice Work</a></li>
-        <li><a href="#posters">Posters</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a class="active" href="./index.html">Voice Acting</a></li>
+        <li><a href="./posters.html">Posters</a></li>
+        <li><a href="./contact.html">Contact</a></li>
         <li><a href="https://twitter.com/CasualKameron?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-lang="en" data-show-count="false">Follow @CasualKameron</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
     </ul>
 
