--- a/posters.html
+++ b/posters.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>KamVox: 404</title>
+    <title>KamVox: Posters</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Poor+Story" rel="stylesheet">
@@ -17,18 +17,14 @@
             <hr>
         </div>
         <li><a href="./index.html">Voice Work</a></li>
-        <li><a href="./posters.html">Posters</a></li>
+        <li><a class="active" href="./posters.html">Posters</a></li>
         <li><a href="./contact.html">Contact</a></li>
         <li><a href="https://twitter.com/CasualKameron?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-lang="en" data-show-count="false">Follow @CasualKameron</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
     </ul>
 
     <div class="content">
         <div class="container">
-            <h1>
-                <b>WOW you found the secret page!</b>
-            </h1>
-            <p>Either you tried to get tricksy with the url or I messed something up.</p>
-            <p>Regardless of the cause I'd recommend returning to another page.</p>
+            <h1></h1>
         </div>
     </div>
 
