--- a/posters.html
+++ b/posters.html
@@ -24,7 +24,7 @@
 
     <div class="content">
         <div class="container">
-            <h1></h1>
+            <h1>Posters coming soon!</h1>
         </div>
     </div>
 
