--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
         <div class="topper">
             <h1>KAM VOX</h1>
                 <div class="subtitle">
-                    Voices for the <i>outside</i> of your head.
+                    <b>I am error.</b>
                 </div>
             <hr>
         </div>
