--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         <div class="topper">
             <h1>KAM VOX</h1>
                 <div class="subtitle">
-                    Voices for the <i>outside</i> of your head.
+                    Ah, my contacts popped out!
                 </div>
             <hr>
         </div>
