--- a/posters.html
+++ b/posters.html
@@ -12,7 +12,7 @@
         <div class="topper">
             <h1>KAM VOX</h1>
                 <div class="subtitle">
-                    Voices for the <i>outside</i> of your head.
+                    Pictures to entice the eyes.
                 </div>
             <hr>
         </div>
