Slight color change

--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
         <div class="topper">
             <h1>KAM VOX</h1>
                 <div class="subtitle">
-                    <b>I am error.</b>
+                    <b>I am <i>error.</i></b>
                 </div>
             <hr>
         </div>
