--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                 <br>
                 <p>Kameron Watson is a Florida-based voice actor with training in contemporary and shakespearean theater.</p>
                 <button class="btn info" style="bottom: 0;">
-                    <a href="files/resume.pdf" style="text-decoration: none; color:#fff;">Resume</a>
+                    <a href="" style="text-decoration: none; color:#fff;">Resume</a>
                 </button>
 
             <!-- Demos -->
-            <table style="max-width: 100; margin: 0 auto;">
+            <table style="max-width: 100; margin: 0 auto; padding: 12px;">
                 <tr>
                     <td>
                         <audio controls>
