Git for Windows Test

--- a/index.html
+++ b/index.html
@@ -25,10 +25,72 @@
     </ul>
 
     <div class="content">
+	
+		<div class="container">
+			<h1>Kameron Watson</h1>
+			<img src="images/self_kam1.jpg" style="border-radius:20%">
+			<p> Kameron is a really really cool guy. Trust me, I can vouch for him. He has all the talent and moxie you could ever need from a VA and more.</p>
+			<p> Don't believe me? This dude got his start in theater and has been an active member in that community since 2012. You just can't stop'em.</p>
+			
+			<hr>
+			
+			<h1>Demos</h1>
+			<table style="max-width: 100; margin: 0 auto; padding: 12px;">
+				<tr>
+					<td>
+						<audio controls>
+							<source src="audio/AudSample.mp3" type="audio/mpeg">
+						</audio>
+					</td>
+					<td>
+						<h3>Vocal Sample</h3>
+					</td>
+				</tr>
+			</table>
+		</div>
+		
+		<div class="parallax">
+			<p> TexticleTexticleTexticleTexticle TexticleTexticleTexticleTexticle TexticleTexticle TexticleTexticleTexticleTexticleTexticleTexticleTexticleTexticle TexticleTexticle Texticle Texticle</p>
+		</div>
+		
+		<div class="container">
+			<h1>Now Voice This!</h1>
+			<p>In November of 2018 Kameron participated in the NowVoiceThis Voice Actor competition. Here are his entries.</p>
+			<table style="max-width: 100; margin: 0 auto; padding: 12px;">
+				<tr>
+					<td>
+						<audio controls>
+							<source src="audio/NVT3r1.mp3" type="audio/mpeg">
+						</audio>
+					</td>
+					<td>
+						<h3>Round 1</h3>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<audio controls>
+							<source src="audio/NVT3r2.wav" type="audio/wav">
+						</audio>
+					</td>
+					<td>
+						<h3>Round 2</h3>
+					</td>
+				</tr>
+			</table>
+		</div>
+		
+		<div class="parallax">
+			<p> TexticleTexticleTexticleTexticle TexticleTexticleTexticleTexticle TexticleTexticle TexticleTexticleTexticleTexticleTexticleTexticleTexticleTexticle TexticleTexticle Texticle Texticle</p>
+		</div>
+	
+	
+	
+	<!--
         <div class="container;" style="overflow:auto">
 
             <div style="text-align:center;">
-            <!-- Introduction -->
+
                 <img src="images/self_kam1.JPG" style="border-radius: 20%; float:left">
                 <br>
                 <p>Kameron Watson is a Florida-based voice actor with training in contemporary and shakespearean theater.</p>
@@ -36,7 +98,7 @@
                     <a href="" style="text-decoration: none; color:#fff;">Resume</a>
                 </button>
 
-            <!-- Demos -->
+
             <table style="max-width: 100; margin: 0 auto; padding: 12px;">
                 <tr>
                     <td>
@@ -52,7 +114,6 @@
             </div>
         </div>
 
-        <!-- Image Links -->
         <div class="container" style="overflow:auto">
         <div style="width: 100%;display: block; position: fixed; padding-top: 90px;">
             <h1>Projects I've Worked On</h1>
@@ -70,8 +131,10 @@
             </a>
         </div>
         </div>
+		-->
     </div>
     <br>
+
     
 
 </body>
