Fixed hyperlink to index

--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
                 </div>
             <hr>
         </div>
-        <li><a href="/">Voice Work</a></li>
+        <li><a href="./">Voice Work</a></li>
         <li><a href="./posters.html">Posters</a></li>
         <li><a href="./contact.html">Contact</a></li>
         <li><a href="https://twitter.com/CasualKameron?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-lang="en" data-show-count="false">Follow @CasualKameron</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
