--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a class="active" href="/">Voice Acting</a></li>
         <li><a href="./posters.html">Posters</a></li>
         <li><a href="./contact.html">Contact</a></li>
-        <li><a href="https://twitter.com/CasualKameron?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-lang="en" data-show-count="false">Follow @CasualKameron</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
+        <li><a href="https://twitter.com/casualkameron?lang=en">Follow Me on Twitter</a></li>
     </ul>
 
     <div class="content">
@@ -31,7 +31,7 @@
 			<img src="images/self_kam1.jpg" style="border-radius:20%">
 			<p> Kameron is a really really cool guy. Trust me, I can vouch for him. He has all the talent and moxie you could ever need from a VA and more.</p>
 			<p> Don't believe me? This dude got his start in theater and has been an active member in that community since 2012. You just can't stop'em.</p>
-			
+	
 			<hr>
 			
 			<h1>Demos</h1>
@@ -42,30 +42,24 @@
 							<source src="audio/AudSample.mp3" type="audio/mpeg">
 						</audio>
 					</td>
-					<td>
-						<h3>Vocal Sample</h3>
-					</td>
+					<td> <h3>Vocal Sample</h3> </td>
 				</tr>
 			</table>
 		</div>
 		
-		<div class="parallax">
-			<p> TexticleTexticleTexticleTexticle TexticleTexticleTexticleTexticle TexticleTexticle TexticleTexticleTexticleTexticleTexticleTexticleTexticleTexticle TexticleTexticle Texticle Texticle</p>
-		</div>
-		
-		<div class="container">
-			<h1>Now Voice This!</h1>
-			<p>In November of 2018 Kameron participated in the NowVoiceThis Voice Actor competition. Here are his entries.</p>
-			<table style="max-width: 100; margin: 0 auto; padding: 12px;">
+		<div class="parallax" style="background-image: url('images/bg_NVT.jpg');">
+			<div class="parcont">
+				<h1><a href="https://twitter.com/nowvoicethis?lang=en">Now Voice This 3</a></h1>
+				<p>During the month of November I participated in a Voice Acting competition called <b>NOW VOICE THIS</b>. In it we were tasked with completing various challenges with the chance to win a contracted session at Sentai Filmworks.</p>
+				<p>Here are my entries</p>
+				<table style="max-width: 100%; margin: 0 auto; padding: 12px;">
 				<tr>
 					<td>
 						<audio controls>
 							<source src="audio/NVT3r1.mp3" type="audio/mpeg">
 						</audio>
 					</td>
-					<td>
-						<h3>Round 1</h3>
-					</td>
+					<td> <h3>Round 1</h3> </td>
 				</tr>
 				<tr>
 					<td>
@@ -73,15 +67,31 @@
 							<source src="audio/NVT3r2.wav" type="audio/wav">
 						</audio>
 					</td>
-					<td>
-						<h3>Round 2</h3>
-					</td>
+					<td> <h3>Round 2</h3> </td>
 				</tr>
 			</table>
+			</div>
 		</div>
 		
-		<div class="parallax">
-			<p> TexticleTexticleTexticleTexticle TexticleTexticleTexticleTexticle TexticleTexticle TexticleTexticleTexticleTexticleTexticleTexticleTexticleTexticle TexticleTexticle Texticle Texticle</p>
+		<div class="parallax" style="background-image: url('images/bg_HK.jpg');">
+			<div class="parcont">
+				<h1><a href="https://sandramj.itch.io/the-hayseed-knight">The Hayseed Knight</a></h1>
+				<p>An independently developed visual novel that focuses on the exploits and past events of the infamous <i>horn-eating</i> Hayseed Knight. In it I play the supporting role of Elbar of Azkedaz, a pompous and loud deer with antlers as big as his ego.</p>
+				<h2>Voice Samples coming soon</h2>
+			</div>
+		</div>
+		
+		<div class="parallax" style="background-image: url('images/bg_SFM.jpg');">
+			<div class="parcont">
+				<h1><a href="https://www.youtube.com/channel/UCgZUFZiZAi7LIOAEg_rg7RA/featured">StarForce Media</a></h1>
+				<p>This is a group that makes motion comic adaptations of various paneled media. Their most popular being a fully voiced cover of IDW's Teenage Mutant Ninja Turtles and Ghostbusters series. I've done a lot of work for these folks so here's some links to some of my favorite appearances.</p>
+				<a href="https://www.youtube.com/watch?v=00CIPdJnidM">
+					<img class="thumb" src="images/thumb_GB.jpg" alt="Ghostbusters IDW">
+				</a>
+				<a href="https://youtu.be/sXaXwJ6Q9sg">
+					<img class="thumb" src="images/thumb_tmnt.jpg" alt="TMNT IDW">
+				</a>
+			</div>
 		</div>
 	
 	
@@ -97,22 +107,6 @@
                 <button class="btn info" style="bottom: 0;">
                     <a href="" style="text-decoration: none; color:#fff;">Resume</a>
                 </button>
-
-
-            <table style="max-width: 100; margin: 0 auto; padding: 12px;">
-                <tr>
-                    <td>
-                        <audio controls>
-                            <source src="audio/AudSample.mp3" type="audio/mpeg">
-                        </audio>
-                    </td>
-                    <td>
-                        <h3>Vocal Sample</h3>
-                    </td>
-                </tr>
-            </table>
-            </div>
-        </div>
 
         <div class="container" style="overflow:auto">
         <div style="width: 100%;display: block; position: fixed; padding-top: 90px;">
