--- a/posters.html
+++ b/posters.html
@@ -19,7 +19,7 @@
         <li><a href="/">Voice Work</a></li>
         <li><a class="active" href="./posters.html">Posters</a></li>
         <li><a href="./contact.html">Contact</a></li>
-        <li><a href="https://twitter.com/CasualKameron?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-lang="en" data-show-count="false">Follow @CasualKameron</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
+		<li><a href="https://twitter.com/casualkameron?lang=en">Follow Me on Twitter</a></li>
     </ul>
 
     <div class="content">
