--- a/index.html
+++ b/index.html
@@ -35,16 +35,12 @@
 			<hr>
 			
 			<h1>Demos</h1>
-			<table style="max-width: 100; margin: 0 auto; padding: 12px;">
-				<tr>
-					<td>
-						<audio controls>
-							<source src="audio/AudSample.mp3" type="audio/mpeg">
-						</audio>
-					</td>
-					<td> <h3>Vocal Sample</h3> </td>
-				</tr>
-			</table>
+			<div>
+				<h3>Vocal Sample</h3>
+				<audio controls>
+					<source src="audio/AudSample.mp3" type="audio/mpeg">
+				</audio>
+			</div>
 		</div>
 		
 		<div class="parallax" style="background-image: url('images/bg_NVT.jpg');">
@@ -52,24 +48,21 @@
 				<h1><a href="https://twitter.com/nowvoicethis?lang=en">Now Voice This 3</a></h1>
 				<p>During the month of November I participated in a Voice Acting competition called <b>NOW VOICE THIS</b>. In it we were tasked with completing various challenges with the chance to win a contracted session at Sentai Filmworks.</p>
 				<p>Here are my entries</p>
-				<table style="max-width: 100%; margin: 0 auto; padding: 12px;">
-				<tr>
-					<td>
-						<audio controls>
-							<source src="audio/NVT3r1.mp3" type="audio/mpeg">
-						</audio>
-					</td>
-					<td> <h3>Round 1</h3> </td>
-				</tr>
-				<tr>
-					<td>
-						<audio controls>
-							<source src="audio/NVT3r2.wav" type="audio/wav">
-						</audio>
-					</td>
-					<td> <h3>Round 2</h3> </td>
-				</tr>
-			</table>
+				<div>
+					<h3>Round 1</h3> 
+					<audio controls>
+						<source src="audio/NVT3r1.mp3" type="audio/mpeg">
+					</audio>
+				</div>	
+				<div>
+					<h3>Round 2</h3> 
+					<audio controls>
+						<source src="audio/NVT3r2.wav" type="audio/wav">
+					</audio>
+				</div>
+				<div>
+					<h2><a href="https://twitter.com/CasualKameron/status/1068290955172855808">Round 3</a></h2>
+				</div>
 			</div>
 		</div>
 		
