Fixed Opacity on iOS

--- a/index.html
+++ b/index.html
@@ -26,14 +26,12 @@
 
     <div class="content">
 	
-		<div class="container">
+		<div class="container" id="Main">
 			<h1>Kameron Watson</h1>
 			<img src="images/self_kam1.jpg" style="border-radius:20%">
 			<p> Kameron is a really really cool guy. Trust me, I can vouch for him. He has all the talent and moxie you could ever need from a VA and more.</p>
 			<p> Don't believe me? This dude got his start in theater and has been an active member in that community since 2012. You just can't stop'em.</p>
-	
 			<hr>
-			
 			<h1>Demos</h1>
 			<div>
 				<h3>Vocal Sample</h3>
@@ -43,30 +41,20 @@
 			</div>
 		</div>
 		
-		<div class="parallax" style="background-image: url('images/bg_NVT.jpg');">
+		<div class="parallax" id="NowVoiceThis" style="background-image: url('images/bg_NVT.jpg');">
 			<div class="parcont">
 				<h1><a href="https://twitter.com/nowvoicethis?lang=en">Now Voice This 3</a></h1>
 				<p>During the month of November I participated in a Voice Acting competition called <b>NOW VOICE THIS</b>. In it we were tasked with completing various challenges with the chance to win a contracted session at Sentai Filmworks.</p>
 				<p>Here are my entries</p>
-				<div>
-					<h3>Round 1</h3> 
-					<audio controls>
-						<source src="audio/NVT3r1.mp3" type="audio/mpeg">
-					</audio>
-				</div>	
-				<div>
-					<h3>Round 2</h3> 
-					<audio controls>
-						<source src="audio/NVT3r2.wav" type="audio/wav">
-					</audio>
-				</div>
-				<div>
-					<h2><a href="https://twitter.com/CasualKameron/status/1068290955172855808">Round 3</a></h2>
+				<div style="display:inline-block;">
+					<h3><a href="audio/NVT3r1.mp3">Round 1</a></h3> 
+					<h3><a href="audio/NVT3r2.wav">Round 2</a></h3> 
+					<h3><a href="https://twitter.com/CasualKameron/status/1068290955172855808">Round 3</a></h3>
 				</div>
 			</div>
 		</div>
 		
-		<div class="parallax" style="background-image: url('images/bg_HK.jpg');">
+		<div class="parallax" id="HayseedKnight" style="background-image: url('images/bg_HK.jpg');">
 			<div class="parcont">
 				<h1><a href="https://sandramj.itch.io/the-hayseed-knight">The Hayseed Knight</a></h1>
 				<p>An independently developed visual novel that focuses on the exploits and past events of the infamous <i>horn-eating</i> Hayseed Knight. In it I play the supporting role of Elbar of Azkedaz, a pompous and loud deer with antlers as big as his ego.</p>
@@ -74,7 +62,7 @@
 			</div>
 		</div>
 		
-		<div class="parallax" style="background-image: url('images/bg_SFM.jpg');">
+		<div class="parallax" id="StarForce" style="background-image: url('images/bg_SFM.jpg');">
 			<div class="parcont">
 				<h1><a href="https://www.youtube.com/channel/UCgZUFZiZAi7LIOAEg_rg7RA/featured">StarForce Media</a></h1>
 				<p>This is a group that makes motion comic adaptations of various paneled media. Their most popular being a fully voiced cover of IDW's Teenage Mutant Ninja Turtles and Ghostbusters series. I've done a lot of work for these folks so here's some links to some of my favorite appearances.</p>
@@ -100,25 +88,8 @@
                 <button class="btn info" style="bottom: 0;">
                     <a href="" style="text-decoration: none; color:#fff;">Resume</a>
                 </button>
-
-        <div class="container" style="overflow:auto">
-        <div style="width: 100%;display: block; position: fixed; padding-top: 90px;">
-            <h1>Projects I've Worked On</h1>
-            <a href="https://youtu.be/eB7TH6O484E">
-                <img class="thumb" src="images/main_gb.png" alt="Ghostbusters IDW">
-            </a>
-            <a href="https://sandramj.itch.io/the-hayseed-knight">
-                <img class="thumb" src="images/main_hk.jpg" alt="The Hayseed Knight">
-            </a>
-            <a href="https://youtu.be/njcydQCuUR8">
-                <img class="thumb" src="images/main_m.jpg" alt="Doctor Menace">
-            </a>
-            <a href="https://youtu.be/96lXEd4DZAw">
-                <img class="thumb" src="images/main_dk.jpg" alt="Dreamkeepers">
-            </a>
-        </div>
-        </div>
-		-->
+				
+	-->
     </div>
     <br>
 
