Site Overhaul. The new Dou is pretty cool!

--- a/artwork.html
+++ b/artwork.html
@@ -11,8 +11,8 @@
     
     <!-- Top Banner -->
     <div class="container">
-        <div class="topper" style="background-color: #383434;">
-            <a class="title" href="http://kamvox.com"> <h1 class="title">Link Error</h1> </a>
+        <div class="topper" style="background-color: #862323;">
+            <a class="title" href="http://kamvox.com"> <h1 class="title">Artwork</h1> </a>
         </div>
     </div>
     <div>
