--- a/voice.html
+++ b/voice.html
@@ -11,8 +11,8 @@
     
     <!-- Top Banner -->
     <div class="container">
-        <div class="topper" style="background-color: #383434;">
-            <a class="title" href="http://kamvox.com"> <h1 class="title">Link Error</h1> </a>
+        <div class="topper" style="background-color: #233b86;">
+            <a class="title" href="http://kamvox.com"> <h1 class="title">Voice</h1> </a>
         </div>
     </div>
     <div>
