Testing banner links

--- a/404.html
+++ b/404.html
@@ -15,6 +15,19 @@
             <a class="title" href="http://kamvox.com"> <h1 class="title">Link Error</h1> </a>
         </div>
     </div>
+
+    <div class="container">
+        <a href="http://kamvox.com/artwork">
+            <img src="images/menu/img_smBrush.jpg" alt="Artwork">
+        </a>
+        <a href="http://kamvox.com/about">
+            <img src="images/menu/img_smQuestion.jpg" alt="About">
+        </a>
+        <a href="http://kamvox.com/voice">
+            <img src="images/menu/img_smMic.jpg" alt="Voice">
+        </a>
+    </div>
+
     <div>
         <h1>Coming Soon</h1>
     </div>
