--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         
         <div class="contMid">
-            <a href="http://kamvox.com/about.html">
+            <a href="http://kamvox.com/about">
                 <img class="menuBut" src="images/menu/img_bigQuestion.jpg" alt="About">
                 <div class="overlay" style="background-color: #2f8623">
                     <div class="text">About</div>
@@ -36,7 +36,7 @@
         </div>
         
         <div class="contRight">
-            <a href="http://kamvox.com/voice.html">
+            <a href="http://kamvox.com/voice">
                 <img class="menuBut" src="images/menu/img_bigMic.jpg" alt="Voice">
                 <div class="overlay" style="background-color: #233b86">
                     <div class="text">Voice</div>
