--- a/404.html
+++ b/404.html
@@ -17,14 +17,14 @@
     </div>
 
     <div class="container">
-        <a href="http://kamvox.com/artwork">
-            <img src="images/menu/img_smBrush.jpg" alt="Artwork">
+        <a href="http://kamvox.com/artwork" style="text-decoration:none;">
+            <img class="banner" src="images/menu/img_smBrush.jpg" alt="Artwork">
         </a>
-        <a href="http://kamvox.com/about">
-            <img src="images/menu/img_smQuestion.jpg" alt="About">
+        <a href="http://kamvox.com/about" style="text-decoration:none;">
+            <img class="banner" src="images/menu/img_smQuestion.jpg" alt="About">
         </a>
-        <a href="http://kamvox.com/voice">
-            <img src="images/menu/img_smMic.jpg" alt="Voice">
+        <a href="http://kamvox.com/voice" style="text-decoration:none;">
+            <img class="banner" src="images/menu/img_smMic.jpg" alt="Voice">
         </a>
     </div>
 
