Updated Banner Filters

--- a/artwork.html
+++ b/artwork.html
@@ -15,6 +15,17 @@
             <a class="title" href="http://kamvox.com"> <h1 class="title">Artwork</h1> </a>
         </div>
     </div>
+    <div class="container">
+            <a href="http://kamvox.com/artwork/" style="text-decoration:none;">
+                <img class="banner" src="images/menu/img_smBrush.jpg"  alt="Artwork">
+            </a>
+            <a href="http://kamvox.com/about/" style="text-decoration:none;">
+                <img class="banner" src="images/menu/img_smQuestion.jpg" style="-webkit-filter: grayscale(90%); filter: grayscale(90%);" alt="About">
+            </a>
+            <a href="http://kamvox.com/voice/" style="text-decoration:none;">
+                <img class="banner" src="images/menu/img_smMic.jpg" style="-webkit-filter: grayscale(90%); filter: grayscale(90%);" alt="Voice">
+            </a>
+    </div>
     <div>
         <h1>Coming Soon</h1>
     </div>
