--- a/voice.html
+++ b/voice.html
@@ -16,13 +16,13 @@
         </div>
     </div>
     <div class="container">
-            <a href="http://kamvox.com/artwork" style="text-decoration:none;">
-                <img class="banner" src="images/menu/img_smBrush.jpg" alt="Artwork">
+            <a href="http://kamvox.com/artwork/" style="text-decoration:none;">
+                <img class="banner" src="images/menu/img_smBrush.jpg" style="-webkit-filter: grayscale(90%); filter: grayscale(90%);" alt="Artwork">
             </a>
-            <a href="http://kamvox.com/about" style="text-decoration:none;">
-                <img class="banner" src="images/menu/img_smQuestion.jpg" alt="About">
+            <a href="http://kamvox.com/about/" style="text-decoration:none;">
+                <img class="banner" src="images/menu/img_smQuestion.jpg" style="-webkit-filter: grayscale(90%); filter: grayscale(90%);" alt="About">
             </a>
-            <a href="http://kamvox.com/voice" style="text-decoration:none;">
+            <a href="http://kamvox.com/voice/" style="text-decoration:none;">
                 <img class="banner" src="images/menu/img_smMic.jpg" alt="Voice">
             </a>
     </div>
