--- a/404.html
+++ b/404.html
@@ -17,13 +17,13 @@
     </div>
 
     <div class="container">
-        <a href="http://kamvox.com/artwork" style="text-decoration:none;">
+        <a href="http://kamvox.com/artwork/" style="text-decoration:none;">
             <img class="banner" src="images/menu/img_smBrush.jpg" alt="Artwork">
         </a>
-        <a href="http://kamvox.com/about" style="text-decoration:none;">
+        <a href="http://kamvox.com/about/" style="text-decoration:none;">
             <img class="banner" src="images/menu/img_smQuestion.jpg" alt="About">
         </a>
-        <a href="http://kamvox.com/voice" style="text-decoration:none;">
+        <a href="http://kamvox.com/voice/" style="text-decoration:none;">
             <img class="banner" src="images/menu/img_smMic.jpg" alt="Voice">
         </a>
     </div>
