Voice Page finally has content.

--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
 
     <div class="container">
         <a href="http://kamvox.com/artwork/" style="text-decoration:none;">
-            <img class="banner" src="images/menu/img_smBrush.jpg" alt="Artwork">
+            <img class="banner" src="images/menu/img_smBrush.jpg" alt="Visual">
         </a>
         <a href="http://kamvox.com/about/" style="text-decoration:none;">
             <img class="banner" src="images/menu/img_smQuestion.jpg" alt="About">
