--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     </div>
     <div class="container">
             <a href="http://kamvox.com/artwork/" style="text-decoration:none;">
-                <img class="banner" src="images/menu/img_smBrush.jpg" style="-webkit-filter: grayscale(90%); filter: grayscale(90%);" alt="Artwork">
+                <img class="banner" src="images/menu/img_smBrush.jpg" style="-webkit-filter: grayscale(90%); filter: grayscale(90%);" alt="Visual">
             </a>
             <a href="http://kamvox.com/about/" style="text-decoration:none;">
                 <img class="banner" src="images/menu/img_smQuestion.jpg" alt="About">
