--- a/artwork.html
+++ b/artwork.html
@@ -12,7 +12,7 @@
     <!-- Top Banner -->
     <div class="container">
         <div class="topper" style="background-color: #862323;">
-            <a class="title" href="http://kamvox.com"> <h1 class="title">Artwork</h1> </a>
+            <a class="title" href="http://kamvox.com"> <h1 class="title">Visual</h1> </a>
         </div>
     </div>
     <div class="container">
@@ -20,7 +20,7 @@
                 <img class="banner" src="images/menu/img_smBrush.jpg"  alt="Artwork">
             </a>
             <a href="http://kamvox.com/about/" style="text-decoration:none;">
-                <img class="banner" src="images/menu/img_smQuestion.jpg" style="-webkit-filter: grayscale(90%); filter: grayscale(90%);" alt="About">
+                <img class="banner" src="images/menu/img_smQuestion.jpg" style="-webkit-filter: grayscale(90%); filter: grayscale(90%);" alt="Visual">
             </a>
             <a href="http://kamvox.com/voice/" style="text-decoration:none;">
                 <img class="banner" src="images/menu/img_smMic.jpg" style="-webkit-filter: grayscale(90%); filter: grayscale(90%);" alt="Voice">
