--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div class="container">
         <div class="contLeft">
             <a href="http://kamvox.com/artwork">
-                <img class="menuBut" src="images/menu/img_bigBrush.jpg" alt="Artwork">
+                <img class="menuBut" src="images/menu/img_bigBrush.jpg" alt="Visual">
                 <div class="overlay" style="background-color: #862323">
-                    <div class="text">Artwork</div>
+                    <div class="text">Visual</div>
                 </div>
             </a>
         </div>
