--- a/voice.html
+++ b/voice.html
@@ -30,12 +30,12 @@
         <div class="pres">
             <h1 style="background-color:#233b86; color:#ededed">Kam's Voice Work</h1>
             <table>
+                <!-- The Hayseed Knight -->
                 <tr>
-                    <!-- The Hayseed Knight -->
                     <td>
                         <div class="presIMG">
                             <a href="https://sandramj.itch.io/the-hayseed-knight" style="text-decoration:none;">
-                                <img src="images/thumb_hk.jpg" alt="The Hayseed Knight">
+                                <img class="showcase" src="images/thumb_hk.jpg" alt="The Hayseed Knight">
                             </a>
                         </div>
                     </td>
@@ -50,12 +50,12 @@
                         </div>
                     </td>
                 </tr>
+                <!-- Beneath the Skies -->
                 <tr>
-                    <!-- Beneath the Skies -->
                     <td>
                         <div class="presIMG">
                             <a href="https://sarchalen.itch.io/our-lost-world-beneath-the-skies" style="text-decoration:none;">
-                                <img src="images/thumb_btk.jpg" alt="Beneath the Skies">
+                                <img class="showcase" src="images/thumb_btk.jpg" alt="Beneath the Skies">
                             </a>
                         </div>
                     </td>
@@ -70,11 +70,11 @@
                         </div>
                     </td>
                 </tr>
+                <!-- Now Voice This 3 -->
                 <tr>
-                    <!-- Now Voice This 3 -->
                     <td>
                         <div class="presIMG">
-                            <img src="images/thumb_nvt.jpg" alt="Now Voice This">
+                            <img class="showcase" src="images/thumb_nvt.jpg" alt="Now Voice This">
                         </div>
                     </td>
                     <td>
@@ -92,12 +92,12 @@
                         
                     </td>
                 </tr>
+                <!-- Doctor Menace -->
                 <tr>
-                    <!-- Doctor Menace -->
                     <td>
                         <div class="pressIMG">
                             <a href="https://www.youtube.com/playlist?list=PLj3kkD3EAEaTD1MXUn1UI_szjh1wgQxy1" style="text-decoration:none;">
-                                <img src="images/thumb_drm.jpg" alt="The Life and Times of Dr. Menace">
+                                <img class="showcase" src="images/thumb_drm.jpg" alt="The Life and Times of Dr. Menace">
                             </a>
                         </div>
                     </td>
