Updated Visual Section

--- a/artwork.html
+++ b/artwork.html
@@ -26,8 +26,44 @@
                 <img class="banner" src="images/menu/img_smMic.jpg" style="-webkit-filter: grayscale(90%); filter: grayscale(90%);" alt="Voice">
             </a>
     </div>
-    <div>
-        <h1>Coming Soon</h1>
+    <div class="container" id="main">
+        <div class="pres">
+            <h1 style="background-color:#862323; color:#ededed;">Kam's Visual Work</h1>
+            <table>
+                <!-- Posters -->
+                <tr>
+                    <td>
+                        <div class="presIMG">
+                            <p>Image</p>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="presCont">
+                            <h2>Poster Shop</h2>
+                            <h3 class="sub">Project Date: Ongoing</h3>
+                            <p>Click the button below to check out all the posters I've made.</p>
+                            <button class="presButton" style="background-color:#862323;">Poster Shop</button>
+                        </div>
+                    </td>
+                </tr>
+                <!-- Deathmarch Ashland -->
+                <tr>
+                    <td>
+                        <div class="presIMG">
+                            <p>Image</p>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="presCont">
+                            <h2>Deathmarch: The Land of Ash</h2>
+                            <h3 class="sub">Project Date: 2016</h3>
+                            <p>A short comedic "found footage" film that I made back in 2016. It's more of a montage of clips I recorded from a roadtrip with friends.</p>
+                            <a href="https://youtu.be/kBVrdkHdmrk" style="text-decoration:none;"><button class="presButton" style="background-color:#862323">Deathmarch Video</button></a>
+                        </div>
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
 </body>
 </html>
